# dbx-dp-food-hygiene-ratings

./: .env.template  .gitignore  LICENSE  README.md  SECURITY.md  databricks.yml  deploy.sh  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
pipelines/: food_hygiene_bronze.py  food_hygiene_raw.py  food_hygiene_silver.py
src/: food_hygiene.py
src/datasources/fhrs/: __init__.py  _datasource.py  _http.py  authorities.py  business_types.py  countries.py  establishments.py  rating_operators.py  ratings.py  regions.py  scheme_types.py  sort_options.py
src/jobs/: ingest_fhrs.py  ingest_food_hygiene.py
src/pipelines/: bronze.py  food_hygiene_bronze.py  food_hygiene_silver.py  gold.py  silver.py
